@@ -1,51 +1,46 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.core.util;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
+import java.io.Console;
 
-import java.io.File;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.io.PrintStream;
-
-import org.apache.accumulo.core.cli.ClientOpts.Password;
 import org.apache.accumulo.core.cli.ClientOpts.PasswordConverter;
 import org.apache.accumulo.core.cli.Help;
 import org.apache.accumulo.core.client.security.tokens.AuthenticationToken;
-import org.apache.accumulo.core.client.security.tokens.AuthenticationToken.AuthenticationTokenSerializer;
 import org.apache.accumulo.core.client.security.tokens.AuthenticationToken.Properties;
 import org.apache.accumulo.core.client.security.tokens.AuthenticationToken.TokenProperty;
 import org.apache.accumulo.core.client.security.tokens.PasswordToken;
+import org.apache.accumulo.core.conf.ClientProperty;
 import org.apache.accumulo.start.spi.KeywordExecutable;
 
 import com.beust.jcommander.Parameter;
 import com.google.auto.service.AutoService;
 
-import jline.console.ConsoleReader;
-
 @AutoService(KeywordExecutable.class)
 public class CreateToken implements KeywordExecutable {
 
-  private ConsoleReader reader = null;
+  private Console reader = null;
 
-  private ConsoleReader getConsoleReader() throws IOException {
+  private Console getConsoleReader() {
+
     if (reader == null)
-      reader = new ConsoleReader();
+      reader = System.console();
     return reader;
   }
 
@@ -55,21 +50,15 @@ public class CreateToken implements KeywordExecutable {
 
     @Parameter(names = "-p", converter = PasswordConverter.class,
         description = "Connection password")
-    public Password password = null;
+    public String password = null;
 
     @Parameter(names = "--password", converter = PasswordConverter.class,
         description = "Enter the connection password", password = true)
-    public Password securePassword = null;
+    public String securePassword = null;
 
     @Parameter(names = {"-tc", "--tokenClass"},
         description = "The class of the authentication token")
     public String tokenClassName = PasswordToken.class.getName();
-
-    @Parameter(names = {"-f", "--file"},
-        description = "The filename to save the auth token to. Multiple tokens"
-            + " can be stored in the same file, but only the first for each user will"
-            + " be recognized.")
-    public String tokenFile = null;
   }
 
   public static void main(String[] args) {
@@ -82,11 +71,16 @@ public class CreateToken implements KeywordExecutable {
   }
 
   @Override
+  public String description() {
+    return "Creates authentication token";
+  }
+
+  @Override
   public void execute(String[] args) {
     Opts opts = new Opts();
-    opts.parseArgs(CreateToken.class.getName(), args);
+    opts.parseArgs("accumulo create-token", args);
 
-    Password pass = opts.password;
+    String pass = opts.password;
     if (pass == null && opts.securePassword != null) {
       pass = opts.securePassword;
     }
@@ -97,13 +91,13 @@ public class CreateToken implements KeywordExecutable {
         principal = getConsoleReader().readLine("Username (aka principal): ");
       }
 
-      AuthenticationToken token =
-          Class.forName(opts.tokenClassName).asSubclass(AuthenticationToken.class).newInstance();
+      AuthenticationToken token = Class.forName(opts.tokenClassName)
+          .asSubclass(AuthenticationToken.class).getDeclaredConstructor().newInstance();
       Properties props = new Properties();
       for (TokenProperty tp : token.getProperties()) {
         String input;
         if (pass != null && tp.getKey().equals("password")) {
-          input = pass.toString();
+          input = pass;
         } else {
           if (tp.getMask()) {
             input = getConsoleReader().readLine(tp.getDescription() + ": ", '*');
@@ -114,26 +108,10 @@ public class CreateToken implements KeywordExecutable {
         props.put(tp.getKey(), input);
         token.init(props);
       }
-      String tokenBase64 =
-          Base64.encodeBase64String(AuthenticationTokenSerializer.serialize(token));
-
-      String tokenFile = opts.tokenFile;
-      if (tokenFile == null) {
-        tokenFile = getConsoleReader().readLine("File to save auth token to: ");
-      }
-      File tf = new File(tokenFile);
-      if (!tf.exists()) {
-        if (!tf.createNewFile()) {
-          throw new IOException("Couldn't create " + tf.getCanonicalPath());
-        }
-      }
-      PrintStream out = new PrintStream(new FileOutputStream(tf, true), true, UTF_8.name());
-      String outString = principal + ":" + opts.tokenClassName + ":" + tokenBase64;
-      out.println(outString);
-      out.close();
-      System.out.println("Token written to " + tokenFile + ". Remember to upload it to hdfs.");
-    } catch (IOException | InstantiationException | IllegalAccessException
-        | ClassNotFoundException e) {
+      System.out.println("auth.type = " + opts.tokenClassName);
+      System.out.println("auth.principal = " + principal);
+      System.out.println("auth.token = " + ClientProperty.encodeToken(token));
+    } catch (ReflectiveOperationException e) {
       throw new RuntimeException(e);
     }
   }
