@@ -1,21 +1,26 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.server.master.balancer;
 
+import static org.easymock.EasyMock.createMock;
+import static org.easymock.EasyMock.expect;
+import static org.easymock.EasyMock.replay;
 import static org.junit.Assert.assertEquals;
 
 import java.util.ArrayList;
@@ -28,37 +33,33 @@ import java.util.SortedMap;
 import java.util.TreeMap;
 import java.util.UUID;
 
-import org.apache.accumulo.core.client.Instance;
 import org.apache.accumulo.core.client.admin.TableOperations;
-import org.apache.accumulo.core.client.impl.thrift.ThriftSecurityException;
-import org.apache.accumulo.core.conf.DefaultConfiguration;
 import org.apache.accumulo.core.conf.Property;
-import org.apache.accumulo.core.data.impl.KeyExtent;
+import org.apache.accumulo.core.data.TableId;
+import org.apache.accumulo.core.dataImpl.KeyExtent;
 import org.apache.accumulo.core.master.thrift.TableInfo;
 import org.apache.accumulo.core.master.thrift.TabletServerStatus;
+import org.apache.accumulo.core.metadata.TServerInstance;
 import org.apache.accumulo.core.tabletserver.thrift.TabletStats;
 import org.apache.accumulo.core.util.HostAndPort;
-import org.apache.accumulo.server.conf.ServerConfigurationFactory;
+import org.apache.accumulo.server.MockServerContext;
+import org.apache.accumulo.server.ServerContext;
 import org.apache.accumulo.server.conf.TableConfiguration;
-import org.apache.accumulo.server.master.state.TServerInstance;
 import org.apache.accumulo.server.master.state.TabletMigration;
 import org.apache.hadoop.io.Text;
-import org.apache.thrift.TException;
 import org.easymock.EasyMock;
 import org.junit.Test;
 
-import com.google.common.collect.ImmutableMap;
-
+@Deprecated(since = "2.1.0")
 public class TableLoadBalancerTest {
 
-  private static Map<String,String> TABLE_ID_MAP =
-      ImmutableMap.of("t1", "a1", "t2", "b12", "t3", "c4");
+  private static Map<String,String> TABLE_ID_MAP = Map.of("t1", "a1", "t2", "b12", "t3", "c4");
 
-  static private TServerInstance mkts(String address, String session) throws Exception {
+  private static TServerInstance mkts(String address, String session) {
     return new TServerInstance(HostAndPort.fromParts(address, 1234), session);
   }
 
-  static private TabletServerStatus status(Object... config) {
+  private static TabletServerStatus status(Object... config) {
     TabletServerStatus result = new TabletServerStatus();
     result.tableMap = new HashMap<>();
     String tablename = null;
@@ -78,14 +79,15 @@ public class TableLoadBalancerTest {
 
   static SortedMap<TServerInstance,TabletServerStatus> state;
 
-  static List<TabletStats> generateFakeTablets(TServerInstance tserver, String tableId) {
+  static List<TabletStats> generateFakeTablets(TServerInstance tserver, TableId tableId) {
     List<TabletStats> result = new ArrayList<>();
     TabletServerStatus tableInfo = state.get(tserver);
     // generate some fake tablets
-    for (int i = 0; i < tableInfo.tableMap.get(tableId).onlineTablets; i++) {
+    for (int i = 0; i < tableInfo.tableMap.get(tableId.canonical()).onlineTablets; i++) {
       TabletStats stats = new TabletStats();
-      stats.extent = new KeyExtent(tableId, new Text(tserver.host() + String.format("%03d", i + 1)),
-          new Text(tserver.host() + String.format("%03d", i))).toThrift();
+      stats.extent =
+          new KeyExtent(tableId, new Text(tserver.getHost() + String.format("%03d", i + 1)),
+              new Text(tserver.getHost() + String.format("%03d", i))).toThrift();
       result.add(stats);
     }
     return result;
@@ -94,73 +96,62 @@ public class TableLoadBalancerTest {
   static class DefaultLoadBalancer
       extends org.apache.accumulo.server.master.balancer.DefaultLoadBalancer {
 
-    public DefaultLoadBalancer(String table) {
+    public DefaultLoadBalancer(TableId table) {
       super(table);
     }
 
     @Override
-    public void init(ServerConfigurationFactory conf) {}
+    public void init(ServerContext context) {}
 
     @Override
-    public List<TabletStats> getOnlineTabletsForTable(TServerInstance tserver, String tableId)
-        throws ThriftSecurityException, TException {
+    public List<TabletStats> getOnlineTabletsForTable(TServerInstance tserver, TableId tableId) {
       return generateFakeTablets(tserver, tableId);
     }
   }
 
-  // ugh... so wish I had provided mock objects to the LoadBalancer in the master
+  // ugh... so wish I had provided mock objects to the LoadBalancer in the manager
   class TableLoadBalancer extends org.apache.accumulo.server.master.balancer.TableLoadBalancer {
-
-    TableLoadBalancer() {
-      super();
-    }
-
-    @Override
-    public void init(ServerConfigurationFactory conf) {}
 
     // use our new classname to test class loading
     @Override
-    protected String getLoadBalancerClassNameForTable(String table) {
+    protected String getLoadBalancerClassNameForTable(TableId table) {
       return DefaultLoadBalancer.class.getName();
     }
 
     // we don't have real tablet servers to ask: invent some online tablets
     @Override
-    public List<TabletStats> getOnlineTabletsForTable(TServerInstance tserver, String tableId)
-        throws ThriftSecurityException, TException {
+    public List<TabletStats> getOnlineTabletsForTable(TServerInstance tserver, TableId tableId) {
       return generateFakeTablets(tserver, tableId);
     }
 
     @Override
     protected TableOperations getTableOperations() {
-      TableOperations tops = EasyMock.createMock(TableOperations.class);
-      EasyMock.expect(tops.tableIdMap()).andReturn(TABLE_ID_MAP).anyTimes();
-      EasyMock.replay(tops);
+      TableOperations tops = createMock(TableOperations.class);
+      expect(tops.tableIdMap()).andReturn(TABLE_ID_MAP).anyTimes();
+      replay(tops);
       return tops;
     }
   }
 
-  @Test
-  public void test() throws Exception {
-    final Instance inst = EasyMock.createMock(Instance.class);
-    EasyMock.expect(inst.getInstanceID())
-        .andReturn(UUID.nameUUIDFromBytes(new byte[] {1, 2, 3, 4, 5, 6, 7, 8, 9, 0}).toString())
-        .anyTimes();
-    EasyMock.replay(inst);
+  private ServerContext createMockContext() {
+    final String instanceId =
+        UUID.nameUUIDFromBytes(new byte[] {1, 2, 3, 4, 5, 6, 7, 8, 9, 0}).toString();
+    return MockServerContext.getWithZK(instanceId, "10.0.0.1:1234", 30_000);
+  }
 
-    ServerConfigurationFactory confFactory = new ServerConfigurationFactory(inst) {
-      @Override
-      public TableConfiguration getTableConfiguration(String tableId) {
-        return new TableConfiguration(inst, tableId, null) {
-          @Override
-          public String get(Property property) {
-            // fake the get table configuration so the test doesn't try to look in zookeeper for
-            // per-table classpath stuff
-            return DefaultConfiguration.getInstance().get(property);
-          }
-        };
-      }
-    };
+  @Test
+  public void test() {
+    final ServerContext context = createMockContext();
+    TableConfiguration conf = createMock(TableConfiguration.class);
+    // Eclipse might show @SuppressWarnings("removal") as unnecessary.
+    // Eclipse is wrong. See https://bugs.eclipse.org/bugs/show_bug.cgi?id=565271
+    @SuppressWarnings("removal")
+    Property TABLE_CLASSPATH = Property.TABLE_CLASSPATH;
+    expect(conf.resolve(Property.TABLE_CLASSLOADER_CONTEXT, TABLE_CLASSPATH))
+        .andReturn(Property.TABLE_CLASSLOADER_CONTEXT).anyTimes();
+    expect(conf.get(Property.TABLE_CLASSLOADER_CONTEXT)).andReturn("").anyTimes();
+    expect(context.getTableConfiguration(EasyMock.anyObject())).andReturn(conf).anyTimes();
+    replay(context, conf);
 
     String t1Id = TABLE_ID_MAP.get("t1"), t2Id = TABLE_ID_MAP.get("t2"),
         t3Id = TABLE_ID_MAP.get("t3");
@@ -171,23 +162,24 @@ public class TableLoadBalancerTest {
     Set<KeyExtent> migrations = Collections.emptySet();
     List<TabletMigration> migrationsOut = new ArrayList<>();
     TableLoadBalancer tls = new TableLoadBalancer();
-    tls.init(confFactory);
+    tls.init(context);
     tls.balance(state, migrations, migrationsOut);
     assertEquals(0, migrationsOut.size());
 
     state.put(mkts("10.0.0.2", "0x02030405"), status());
     tls = new TableLoadBalancer();
-    tls.init(confFactory);
+    tls.init(context);
     tls.balance(state, migrations, migrationsOut);
     int count = 0;
-    Map<String,Integer> movedByTable = new HashMap<>();
-    movedByTable.put(t1Id, Integer.valueOf(0));
-    movedByTable.put(t2Id, Integer.valueOf(0));
-    movedByTable.put(t3Id, Integer.valueOf(0));
+    Map<TableId,Integer> movedByTable = new HashMap<>();
+    movedByTable.put(TableId.of(t1Id), 0);
+    movedByTable.put(TableId.of(t2Id), 0);
+    movedByTable.put(TableId.of(t3Id), 0);
     for (TabletMigration migration : migrationsOut) {
-      if (migration.oldServer.equals(svr))
+      if (migration.oldServer.equals(svr)) {
         count++;
-      String key = migration.tablet.getTableId();
+      }
+      TableId key = migration.tablet.tableId();
       movedByTable.put(key, movedByTable.get(key) + 1);
     }
     assertEquals(15, count);
