@@ -1,18 +1,20 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.tserver.replication;
 
@@ -30,53 +32,44 @@ import java.security.PrivilegedAction;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.Map;
-import java.util.Objects;
+import java.util.Properties;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 
 import org.apache.accumulo.core.client.AccumuloException;
 import org.apache.accumulo.core.client.AccumuloSecurityException;
-import org.apache.accumulo.core.client.Instance;
 import org.apache.accumulo.core.client.TableNotFoundException;
-import org.apache.accumulo.core.client.ZooKeeperInstance;
-import org.apache.accumulo.core.client.impl.ClientContext;
-import org.apache.accumulo.core.client.impl.ClientExecReturn;
-import org.apache.accumulo.core.client.impl.Credentials;
-import org.apache.accumulo.core.client.impl.ReplicationClient;
 import org.apache.accumulo.core.client.security.tokens.AuthenticationToken;
 import org.apache.accumulo.core.client.security.tokens.KerberosToken;
 import org.apache.accumulo.core.client.security.tokens.PasswordToken;
+import org.apache.accumulo.core.clientImpl.ClientContext;
+import org.apache.accumulo.core.clientImpl.ClientExecReturn;
+import org.apache.accumulo.core.clientImpl.ClientInfo;
+import org.apache.accumulo.core.clientImpl.ReplicationClient;
 import org.apache.accumulo.core.conf.AccumuloConfiguration;
+import org.apache.accumulo.core.conf.ClientProperty;
 import org.apache.accumulo.core.conf.Property;
 import org.apache.accumulo.core.data.Mutation;
 import org.apache.accumulo.core.file.rfile.RFile;
 import org.apache.accumulo.core.protobuf.ProtobufUtil;
 import org.apache.accumulo.core.replication.ReplicationTarget;
-import org.apache.accumulo.core.replication.thrift.KeyValues;
-import org.apache.accumulo.core.replication.thrift.ReplicationCoordinator;
 import org.apache.accumulo.core.replication.thrift.ReplicationServicer;
 import org.apache.accumulo.core.replication.thrift.ReplicationServicer.Client;
 import org.apache.accumulo.core.replication.thrift.WalEdits;
-import org.apache.accumulo.core.security.thrift.TCredentials;
-import org.apache.accumulo.core.trace.ProbabilitySampler;
-import org.apache.accumulo.core.trace.Span;
-import org.apache.accumulo.core.trace.Trace;
+import org.apache.accumulo.core.securityImpl.thrift.TCredentials;
+import org.apache.accumulo.core.singletons.SingletonReservation;
+import org.apache.accumulo.core.trace.TraceUtil;
 import org.apache.accumulo.core.util.HostAndPort;
-import org.apache.accumulo.server.client.HdfsZooInstance;
-import org.apache.accumulo.server.conf.ServerConfigurationFactory;
-import org.apache.accumulo.server.fs.VolumeManager;
-import org.apache.accumulo.server.fs.VolumeManagerImpl;
+import org.apache.accumulo.server.ServerContext;
 import org.apache.accumulo.server.replication.ReplicaSystem;
 import org.apache.accumulo.server.replication.ReplicaSystemHelper;
 import org.apache.accumulo.server.replication.StatusUtil;
 import org.apache.accumulo.server.replication.proto.Replication.Status;
 import org.apache.accumulo.tserver.log.DfsLogger;
-import org.apache.accumulo.tserver.log.DfsLogger.DFSLoggerInputStreams;
 import org.apache.accumulo.tserver.log.DfsLogger.LogHeaderIncompleteException;
 import org.apache.accumulo.tserver.logger.LogFileKey;
 import org.apache.accumulo.tserver.logger.LogFileValue;
-import org.apache.commons.lang.StringUtils;
 import org.apache.hadoop.fs.FSDataInputStream;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.security.UserGroupInformation;
@@ -84,44 +77,21 @@ import org.apache.thrift.transport.TTransportException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
+import io.opentelemetry.api.trace.Span;
+import io.opentelemetry.context.Scope;
+
+@Deprecated
 public class AccumuloReplicaSystem implements ReplicaSystem {
   private static final Logger log = LoggerFactory.getLogger(AccumuloReplicaSystem.class);
   private static final String RFILE_SUFFIX = "." + RFile.EXTENSION;
 
   private String instanceName, zookeepers;
   private AccumuloConfiguration conf;
-  private VolumeManager fs;
-
-  protected String getInstanceName() {
-    return instanceName;
-  }
-
-  protected void setInstanceName(String instanceName) {
-    this.instanceName = instanceName;
-  }
-
-  protected String getZookeepers() {
-    return zookeepers;
-  }
-
-  protected void setZookeepers(String zookeepers) {
-    this.zookeepers = zookeepers;
-  }
-
-  protected AccumuloConfiguration getConf() {
-    return conf;
-  }
+  private ServerContext context;
 
   protected void setConf(AccumuloConfiguration conf) {
     this.conf = conf;
-  }
-
-  protected VolumeManager getFs() {
-    return fs;
-  }
-
-  protected void setFs(VolumeManager fs) {
-    this.fs = fs;
   }
 
   /**
@@ -132,12 +102,12 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
   }
 
   @Override
-  public void configure(String configuration) {
+  public void configure(ServerContext context, String configuration) {
     requireNonNull(configuration);
 
     // instance_name,zookeepers
     int index = configuration.indexOf(',');
-    if (-1 == index) {
+    if (index == -1) {
       try {
         Thread.sleep(1000);
       } catch (InterruptedException e) {
@@ -148,23 +118,15 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
 
     instanceName = configuration.substring(0, index);
     zookeepers = configuration.substring(index + 1);
-
-    conf = new ServerConfigurationFactory(HdfsZooInstance.getInstance()).getConfiguration();
-
-    try {
-      fs = VolumeManagerImpl.get(conf);
-    } catch (IOException e) {
-      log.error("Could not connect to filesystem", e);
-      throw new RuntimeException(e);
-    }
+    conf = context.getConfiguration();
+    this.context = context;
   }
 
+  @SuppressFBWarnings(value = "PATH_TRAVERSAL_IN", justification = "path provided by admin")
   @Override
   public Status replicate(final Path p, final Status status, final ReplicationTarget target,
       final ReplicaSystemHelper helper) {
-    final Instance localInstance = HdfsZooInstance.getInstance();
-    final AccumuloConfiguration localConf =
-        new ServerConfigurationFactory(localInstance).getConfiguration();
+    final AccumuloConfiguration localConf = conf;
 
     log.debug("Replication RPC timeout is {}",
         localConf.get(Property.REPLICATION_RPC_TIMEOUT.getKey()));
@@ -185,7 +147,7 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
       password = getPassword(localConf, target);
     }
 
-    if (null != keytab) {
+    if (keytab != null) {
       try {
         final UserGroupInformation accumuloUgi = UserGroupInformation.getCurrentUser();
         // Get a UGI with the principal + keytab
@@ -193,20 +155,17 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
             keytab.getAbsolutePath());
 
         // Run inside a doAs to avoid nuking the Tserver's user
-        return ugi.doAs(new PrivilegedAction<Status>() {
-          @Override
-          public Status run() {
-            KerberosToken token;
-            try {
-              // Do *not* replace the current user
-              token = new KerberosToken(principal, keytab);
-            } catch (IOException e) {
-              log.error("Failed to create KerberosToken", e);
-              return status;
-            }
-            ClientContext peerContext = getContextForPeer(localConf, target, principal, token);
-            return _replicate(p, status, target, helper, localConf, peerContext, accumuloUgi);
+        return ugi.doAs((PrivilegedAction<Status>) () -> {
+          KerberosToken token;
+          try {
+            // Do *not* replace the current user
+            token = new KerberosToken(principal, keytab);
+          } catch (IOException e) {
+            log.error("Failed to create KerberosToken", e);
+            return status;
           }
+          ClientContext peerContext = getContextForPeer(localConf, target, principal, token);
+          return _replicate(p, status, target, helper, localConf, peerContext, accumuloUgi);
         });
       } catch (IOException e) {
         // Can't log in, can't replicate
@@ -241,10 +200,9 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
   private Status _replicate(final Path p, final Status status, final ReplicationTarget target,
       final ReplicaSystemHelper helper, final AccumuloConfiguration localConf,
       final ClientContext peerContext, final UserGroupInformation accumuloUgi) {
-    try {
-      double tracePercent = localConf.getFraction(Property.REPLICATION_TRACE_PERCENT);
-      ProbabilitySampler sampler = new ProbabilitySampler(tracePercent);
-      Trace.on("AccumuloReplicaSystem", sampler);
+
+    Span span = TraceUtil.startSpan(this.getClass(), "_replicate");
+    try (Scope replicaScope = span.makeCurrent()) {
 
       // Remote identifier is an integer (table id) in this case.
       final String remoteTableId = target.getRemoteIdentifier();
@@ -256,31 +214,28 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
         log.debug("Attempt {}", i);
         String peerTserverStr;
         log.debug("Fetching peer tserver address");
-        Span span = Trace.start("Fetch peer tserver");
-        try {
-          // Ask the master on the remote what TServer we should talk with to replicate the data
+        Span span2 = TraceUtil.startSpan(this.getClass(), "_replicate::Fetch peer tserver");
+        try (Scope scope = span2.makeCurrent()) {
+          // Ask the manager on the remote what TServer we should talk with to replicate the data
           peerTserverStr = ReplicationClient.executeCoordinatorWithReturn(peerContext,
-              new ClientExecReturn<String,ReplicationCoordinator.Client>() {
-
-                @Override
-                public String execute(ReplicationCoordinator.Client client) throws Exception {
-                  return client.getServicerAddress(remoteTableId, peerContext.rpcCreds());
-                }
-
-              });
+              client -> client.getServicerAddress(remoteTableId, peerContext.rpcCreds()));
         } catch (AccumuloException | AccumuloSecurityException e) {
           // No progress is made
           log.error(
-              "Could not connect to master at {}, cannot proceed with replication. Will retry",
+              "Could not connect to manager at {}, cannot proceed with replication. Will retry",
               target, e);
+          TraceUtil.setException(span2, e, false);
           continue;
+        } catch (Exception e) {
+          TraceUtil.setException(span2, e, true);
+          throw e;
         } finally {
-          span.stop();
+          span2.end();
         }
 
-        if (null == peerTserverStr) {
+        if (peerTserverStr == null) {
           // Something went wrong, and we didn't get a valid tserver from the remote for some reason
-          log.warn("Did not receive tserver from master at {}, cannot proceed"
+          log.warn("Did not receive tserver from manager at {}, cannot proceed"
               + " with replication. Will retry.", target);
           continue;
         }
@@ -291,32 +246,38 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
 
         // We have a tserver on the remote -- send the data its way.
         Status finalStatus;
-        final long sizeLimit = conf.getMemoryInBytes(Property.REPLICATION_MAX_UNIT_SIZE);
+        final long sizeLimit = conf.getAsBytes(Property.REPLICATION_MAX_UNIT_SIZE);
         try {
           if (p.getName().endsWith(RFILE_SUFFIX)) {
-            span = Trace.start("RFile replication");
-            try {
-              finalStatus = replicateRFiles(peerContext, peerTserver, target, p, status, sizeLimit,
-                  remoteTableId, peerContext.rpcCreds(), helper, timeout);
+            Span span3 = TraceUtil.startSpan(this.getClass(), "_replicate::RFile replication");
+            try (Scope scope = span3.makeCurrent()) {
+              finalStatus = replicateRFiles(peerContext, peerTserver, target, p, status, timeout);
+            } catch (Exception e) {
+              TraceUtil.setException(span3, e, true);
+              throw e;
             } finally {
-              span.stop();
+              span3.end();
             }
           } else {
-            span = Trace.start("WAL replication");
-            try {
+            Span span4 = TraceUtil.startSpan(this.getClass(), "_replicate::WAL replication");
+            try (Scope scope = span4.makeCurrent()) {
               finalStatus = replicateLogs(peerContext, peerTserver, target, p, status, sizeLimit,
                   remoteTableId, peerContext.rpcCreds(), helper, accumuloUgi, timeout);
+            } catch (Exception e) {
+              TraceUtil.setException(span4, e, true);
+              throw e;
             } finally {
-              span.stop();
+              span4.end();
             }
           }
 
-          log.debug("New status for {} after replicating to {} is {}", p, peerContext.getInstance(),
-              ProtobufUtil.toString(finalStatus));
+          log.debug("New status for {} after replicating to {} is {}", p,
+              peerContext.getInstanceName(), ProtobufUtil.toString(finalStatus));
 
           return finalStatus;
         } catch (TTransportException | AccumuloException | AccumuloSecurityException e) {
           log.warn("Could not connect to remote server {}, will retry", peerTserverStr, e);
+          TraceUtil.setException(span, e, false);
           sleepUninterruptibly(1, TimeUnit.SECONDS);
         }
       }
@@ -326,57 +287,53 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
 
       // We made no status, punt on it for now, and let it re-queue itself for work
       return status;
+    } catch (Exception e) {
+      TraceUtil.setException(span, e, true);
+      throw e;
     } finally {
-      Trace.off();
+      span.end();
     }
   }
 
   protected Status replicateRFiles(ClientContext peerContext, final HostAndPort peerTserver,
-      final ReplicationTarget target, final Path p, final Status status, final long sizeLimit,
-      final String remoteTableId, final TCredentials tcreds, final ReplicaSystemHelper helper,
-      long timeout) throws TTransportException, AccumuloException, AccumuloSecurityException {
-    try (final DataInputStream input = getRFileInputStream(p)) {
-      Status lastStatus = status, currentStatus = status;
-      while (true) {
-        // Read and send a batch of mutations
-        ReplicationStats replResult = ReplicationClient.executeServicerWithReturn(peerContext,
-            peerTserver, new RFileClientExecReturn(target, input, p, currentStatus, sizeLimit,
-                remoteTableId, tcreds),
-            timeout);
+      final ReplicationTarget target, final Path p, final Status status, long timeout)
+      throws TTransportException, AccumuloException, AccumuloSecurityException {
 
-        // Catch the overflow
-        long newBegin = currentStatus.getBegin() + replResult.entriesConsumed;
-        if (newBegin < 0) {
-          newBegin = Long.MAX_VALUE;
-        }
+    Status lastStatus = status, currentStatus = status;
+    while (true) {
+      // Read and send a batch of mutations
+      ReplicationStats replResult = ReplicationClient.executeServicerWithReturn(peerContext,
+          peerTserver, new RFileClientExecReturn(), timeout);
 
-        currentStatus = Status.newBuilder(currentStatus).setBegin(newBegin).build();
+      // Catch the overflow
+      long newBegin = currentStatus.getBegin() + replResult.entriesConsumed;
+      if (newBegin < 0) {
+        newBegin = Long.MAX_VALUE;
+      }
 
-        log.debug("Sent batch for replication of {} to {}, with new Status {}", p, target,
-            ProtobufUtil.toString(currentStatus));
+      currentStatus = Status.newBuilder(currentStatus).setBegin(newBegin).build();
 
-        // If we got a different status
-        if (!currentStatus.equals(lastStatus)) {
-          // If we don't have any more work, just quit
-          if (!StatusUtil.isWorkRequired(currentStatus)) {
-            return currentStatus;
-          } else {
-            // Otherwise, let it loop and replicate some more data
-            lastStatus = currentStatus;
-          }
+      log.debug("Sent batch for replication of {} to {}, with new Status {}", p, target,
+          ProtobufUtil.toString(currentStatus));
+
+      // If we got a different status
+      if (currentStatus.equals(lastStatus)) {
+        log.debug("Did not replicate any new data for {} to {}, (state was {})", p, target,
+            ProtobufUtil.toString(lastStatus));
+
+        // otherwise, we didn't actually replicate (likely because there was error sending the
+        // data)
+        // we can just not record any updates, and it will be picked up again by the work assigner
+        return status;
+      } else {
+        // If we don't have any more work, just quit
+        if (StatusUtil.isWorkRequired(currentStatus)) {
+          // Otherwise, let it loop and replicate some more data
+          lastStatus = currentStatus;
         } else {
-          log.debug("Did not replicate any new data for {} to {}, (state was {})", p, target,
-              ProtobufUtil.toString(lastStatus));
-
-          // otherwise, we didn't actually replicate (likely because there was error sending the
-          // data)
-          // we can just not record any updates, and it will be picked up again by the work assigner
-          return status;
+          return currentStatus;
         }
       }
-    } catch (IOException e) {
-      log.error("Could not create input stream from RFile, will retry", e);
-      return status;
     }
   }
 
@@ -388,22 +345,26 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
 
     log.debug("Replication WAL to peer tserver");
     final Set<Integer> tids;
-    try (final FSDataInputStream fsinput = fs.open(p);
+    try (final FSDataInputStream fsinput = context.getVolumeManager().open(p);
         final DataInputStream input = getWalStream(p, fsinput)) {
       log.debug("Skipping unwanted data in WAL");
-      Span span = Trace.start("Consume WAL prefix");
-      span.data("file", p.toString());
-      try {
+      Span span = TraceUtil.startSpan(this.getClass(), "replicateLogs::Consume WAL prefix");
+      try (Scope scope = span.makeCurrent()) {
+        span.setAttribute("file", p.toString());
         // We want to read all records in the WAL up to the "begin" offset contained in the Status
         // message,
         // building a Set of tids from DEFINE_TABLET events which correspond to table ids for future
         // mutations
-        tids = consumeWalPrefix(target, input, p, status, sizeLimit);
+        tids = consumeWalPrefix(target, input, status);
       } catch (IOException e) {
         log.warn("Unexpected error consuming file.");
+        TraceUtil.setException(span, e, false);
         return status;
+      } catch (Exception e) {
+        TraceUtil.setException(span, e, true);
+        throw e;
       } finally {
-        span.stop();
+        span.end();
       }
 
       log.debug("Sending batches of data to peer tserver");
@@ -411,27 +372,27 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
       Status lastStatus = status, currentStatus = status;
       final AtomicReference<Exception> exceptionRef = new AtomicReference<>();
       while (true) {
-        // Set some trace info
-        span = Trace.start("Replicate WAL batch");
-        span.data("Batch size (bytes)", Long.toString(sizeLimit));
-        span.data("File", p.toString());
-        span.data("Peer instance name", peerContext.getInstance().getInstanceName());
-        span.data("Peer tserver", peerTserver.toString());
-        span.data("Remote table ID", remoteTableId);
-
         ReplicationStats replResult;
-        try {
+        Span span2 = TraceUtil.startSpan(this.getClass(), "replicateLogs::Replicate WAL batch");
+        try (Scope scope = span2.makeCurrent()) {
+          span2.setAttribute("Batch size (bytes)", Long.toString(sizeLimit));
+          span2.setAttribute("File", p.toString());
+          span2.setAttribute("Peer instance name", peerContext.getInstanceName());
+          span2.setAttribute("Peer tserver", peerTserver.toString());
+          span2.setAttribute("Remote table ID", remoteTableId);
+
           // Read and send a batch of mutations
           replResult = ReplicationClient.executeServicerWithReturn(peerContext, peerTserver,
-              new WalClientExecReturn(target, input, p, currentStatus, sizeLimit, remoteTableId,
-                  tcreds, tids),
+              new WalClientExecReturn(this, target, input, p, currentStatus, sizeLimit,
+                  remoteTableId, tcreds, tids),
               timeout);
         } catch (Exception e) {
-          log.error("Caught exception replicating data to {} at {}",
-              peerContext.getInstance().getInstanceName(), peerTserver, e);
+          log.error("Caught exception replicating data to {} at {}", peerContext.getInstanceName(),
+              peerTserver, e);
+          TraceUtil.setException(span2, e, true);
           throw e;
         } finally {
-          span.stop();
+          span2.end();
         }
 
         // Catch the overflow
@@ -446,24 +407,30 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
             ProtobufUtil.toString(currentStatus));
 
         // If we got a different status
-        if (!currentStatus.equals(lastStatus)) {
-          span = Trace.start("Update replication table");
-          try {
-            if (null != accumuloUgi) {
+        if (currentStatus.equals(lastStatus)) {
+          log.debug("Did not replicate any new data for {} to {}, (state was {})", p, target,
+              ProtobufUtil.toString(lastStatus));
+
+          // otherwise, we didn't actually replicate (likely because there was error sending the
+          // data)
+          // we can just not record any updates, and it will be picked up again by the work assigner
+          return status;
+        } else {
+          Span span3 =
+              TraceUtil.startSpan(this.getClass(), "replicateLogs::Update replication table");
+          try (Scope scope = span3.makeCurrent()) {
+            if (accumuloUgi != null) {
               final Status copy = currentStatus;
-              accumuloUgi.doAs(new PrivilegedAction<Void>() {
-                @Override
-                public Void run() {
-                  try {
-                    helper.recordNewStatus(p, copy, target);
-                  } catch (Exception e) {
-                    exceptionRef.set(e);
-                  }
-                  return null;
+              accumuloUgi.doAs((PrivilegedAction<Void>) () -> {
+                try {
+                  helper.recordNewStatus(p, copy, target);
+                } catch (Exception e) {
+                  exceptionRef.set(e);
                 }
+                return null;
               });
               Exception e = exceptionRef.get();
-              if (null != e) {
+              if (e != null) {
                 if (e instanceof TableNotFoundException) {
                   throw (TableNotFoundException) e;
                 } else if (e instanceof AccumuloSecurityException) {
@@ -482,28 +449,24 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
                 "Tried to update status in replication table for {} as"
                     + " {}, but the table did not exist",
                 p, ProtobufUtil.toString(currentStatus), e);
+            TraceUtil.setException(span3, e, true);
             throw new RuntimeException("Replication table did not exist, will retry", e);
+          } catch (Exception e) {
+            TraceUtil.setException(span3, e, true);
+            throw e;
           } finally {
-            span.stop();
+            span3.end();
           }
 
           log.debug("Recorded updated status for {}: {}", p, ProtobufUtil.toString(currentStatus));
 
           // If we don't have any more work, just quit
-          if (!StatusUtil.isWorkRequired(currentStatus)) {
-            return currentStatus;
-          } else {
+          if (StatusUtil.isWorkRequired(currentStatus)) {
             // Otherwise, let it loop and replicate some more data
             lastStatus = currentStatus;
+          } else {
+            return currentStatus;
           }
-        } else {
-          log.debug("Did not replicate any new data for {} to {}, (state was {})", p, target,
-              ProtobufUtil.toString(lastStatus));
-
-          // otherwise, we didn't actually replicate (likely because there was error sending the
-          // data)
-          // we can just not record any updates, and it will be picked up again by the work assigner
-          return status;
         }
       }
     } catch (LogHeaderIncompleteException e) {
@@ -516,16 +479,20 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
       } else {
         newStatus = Status.newBuilder(status).setBegin(status.getEnd()).build();
       }
-      Span span = Trace.start("Update replication table");
-      try {
+      Span span4 = TraceUtil.startSpan(this.getClass(), "replicateLogs::Update replication table");
+      try (Scope scope = span4.makeCurrent()) {
         helper.recordNewStatus(p, newStatus, target);
       } catch (TableNotFoundException tnfe) {
         log.error(
             "Tried to update status in replication table for {} as {}, but the table did not exist",
             p, ProtobufUtil.toString(newStatus), e);
+        TraceUtil.setException(span4, e, true);
         throw new RuntimeException("Replication table did not exist, will retry", e);
+      } catch (Exception ex) {
+        TraceUtil.setException(span4, e, true);
+        throw ex;
       } finally {
-        span.stop();
+        span4.end();
       }
       return newStatus;
     } catch (IOException e) {
@@ -535,106 +502,14 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
     }
   }
 
-  protected class WalClientExecReturn
-      implements ClientExecReturn<ReplicationStats,ReplicationServicer.Client> {
-
-    private ReplicationTarget target;
-    private DataInputStream input;
-    private Path p;
-    private Status status;
-    private long sizeLimit;
-    private String remoteTableId;
-    private TCredentials tcreds;
-    private Set<Integer> tids;
-
-    public WalClientExecReturn(ReplicationTarget target, DataInputStream input, Path p,
-        Status status, long sizeLimit, String remoteTableId, TCredentials tcreds,
-        Set<Integer> tids) {
-      this.target = target;
-      this.input = input;
-      this.p = p;
-      this.status = status;
-      this.sizeLimit = sizeLimit;
-      this.remoteTableId = remoteTableId;
-      this.tcreds = tcreds;
-      this.tids = tids;
-    }
-
-    @Override
-    public ReplicationStats execute(Client client) throws Exception {
-      WalReplication edits = getWalEdits(target, input, p, status, sizeLimit, tids);
-
-      log.debug(
-          "Read {} WAL entries and retained {} bytes of WAL entries for replication to peer '{}'",
-          (Long.MAX_VALUE == edits.entriesConsumed) ? "all remaining" : edits.entriesConsumed,
-          edits.sizeInBytes, p);
-
-      // If we have some edits to send
-      if (0 < edits.walEdits.getEditsSize()) {
-        log.debug("Sending {} edits", edits.walEdits.getEditsSize());
-        long entriesReplicated = client.replicateLog(remoteTableId, edits.walEdits, tcreds);
-        if (entriesReplicated != edits.numUpdates) {
-          log.warn("Sent {} WAL entries for replication but {} were reported as replicated",
-              edits.numUpdates, entriesReplicated);
-        } else {
-          log.debug("Replicated {} edits", entriesReplicated);
-        }
-
-        // We don't have to replicate every LogEvent in the file (only Mutation LogEvents), but we
-        // want to track progress in the file relative to all LogEvents (to avoid duplicative
-        // processing/replication)
-        return edits;
-      } else if (edits.entriesConsumed > 0) {
-        // Even if we send no data, we want to record a non-zero new begin value to avoid checking
-        // the same
-        // log entries multiple times to determine if they should be sent
-        return edits;
-      }
-
-      // No data sent (bytes nor records) and no progress made
-      return new ReplicationStats(0l, 0l, 0l);
-    }
-  }
-
+  @Deprecated
   protected class RFileClientExecReturn
       implements ClientExecReturn<ReplicationStats,ReplicationServicer.Client> {
 
-    private ReplicationTarget target;
-    private DataInputStream input;
-    private Path p;
-    private Status status;
-    private long sizeLimit;
-    private String remoteTableId;
-    private TCredentials tcreds;
-
-    public RFileClientExecReturn(ReplicationTarget target, DataInputStream input, Path p,
-        Status status, long sizeLimit, String remoteTableId, TCredentials tcreds) {
-      this.target = target;
-      this.input = input;
-      this.p = p;
-      this.status = status;
-      this.sizeLimit = sizeLimit;
-      this.remoteTableId = remoteTableId;
-      this.tcreds = tcreds;
-    }
-
     @Override
-    public ReplicationStats execute(Client client) throws Exception {
-      RFileReplication kvs = getKeyValues(target, input, p, status, sizeLimit);
-      if (0 < kvs.keyValues.getKeyValuesSize()) {
-        long entriesReplicated = client.replicateKeyValues(remoteTableId, kvs.keyValues, tcreds);
-        if (entriesReplicated != kvs.keyValues.getKeyValuesSize()) {
-          log.warn(
-              "Sent {} KeyValue entries for replication but only {} were reported as replicated",
-              kvs.keyValues.getKeyValuesSize(), entriesReplicated);
-        }
-
-        // Not as important to track as WALs because we don't skip any KVs in an RFile
-        return kvs;
-      }
-
+    public ReplicationStats execute(Client client) {
       // No data sent (bytes nor records) and no progress made
-      return new ReplicationStats(0l, 0l, 0l);
+      return new ReplicationStats(0L, 0L, 0L);
     }
   }
 
@@ -646,7 +521,7 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
         localConf.getAllPropertiesWithPrefix(Property.REPLICATION_PEER_PASSWORD);
     String password =
         peerPasswords.get(Property.REPLICATION_PEER_PASSWORD.getKey() + target.getPeerName());
-    if (null == password) {
+    if (password == null) {
       throw new IllegalArgumentException("Cannot get password for " + target.getPeerName());
     }
     return password;
@@ -660,7 +535,7 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
         localConf.getAllPropertiesWithPrefix(Property.REPLICATION_PEER_KEYTAB);
     String keytab =
         peerKeytabs.get(Property.REPLICATION_PEER_KEYTAB.getKey() + target.getPeerName());
-    if (null == keytab) {
+    if (keytab == null) {
       throw new IllegalArgumentException("Cannot get keytab for " + target.getPeerName());
     }
     return keytab;
@@ -676,7 +551,7 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
         localConf.getAllPropertiesWithPrefix(Property.REPLICATION_PEER_USER);
 
     String user = peerUsers.get(userKey);
-    if (null == user) {
+    if (user == null) {
       throw new IllegalArgumentException("Cannot get user for " + target.getPeerName());
     }
     return user;
@@ -689,22 +564,18 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
     requireNonNull(principal);
     requireNonNull(token);
 
-    return new ClientContext(getPeerInstance(target), new Credentials(principal, token), localConf);
+    Properties properties = new Properties();
+    properties.setProperty(ClientProperty.INSTANCE_NAME.getKey(), instanceName);
+    properties.setProperty(ClientProperty.INSTANCE_ZOOKEEPERS.getKey(), zookeepers);
+    properties.setProperty(ClientProperty.AUTH_PRINCIPAL.getKey(), principal);
+    ClientProperty.setAuthenticationToken(properties, token);
+
+    return new ClientContext(SingletonReservation.noop(), ClientInfo.from(properties, token),
+        localConf);
   }
 
-  protected Instance getPeerInstance(ReplicationTarget target) {
-    return new ZooKeeperInstance(instanceName, zookeepers);
-  }
-
-  protected RFileReplication getKeyValues(ReplicationTarget target, DataInputStream input, Path p,
-      Status status, long sizeLimit) {
-    // TODO ACCUMULO-2580 Implement me
-    throw new UnsupportedOperationException();
-  }
-
-  protected Set<Integer> consumeWalPrefix(ReplicationTarget target, DataInputStream wal, Path p,
-      Status status, long sizeLimit) throws IOException {
-    Set<Integer> tids = new HashSet<>();
+  protected Set<Integer> consumeWalPrefix(ReplicationTarget target, DataInputStream wal,
+      Status status) throws IOException {
     LogFileKey key = new LogFileKey();
     LogFileValue value = new LogFileValue();
 
@@ -719,7 +590,7 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
 
       switch (key.event) {
         case DEFINE_TABLET:
-          if (target.getSourceTableId().equals(key.tablet.getTableId())) {
+          if (target.getSourceTableId().equals(key.tablet.tableId())) {
             desiredTids.add(key.tabletId);
           }
           break;
@@ -728,17 +599,20 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
       }
     }
 
-    return tids;
+    return desiredTids;
   }
 
-  public DataInputStream getWalStream(Path p, FSDataInputStream input) throws IOException {
-    Span span = Trace.start("Read WAL header");
-    span.data("file", p.toString());
-    try {
-      DFSLoggerInputStreams streams = DfsLogger.readHeaderAndReturnStream(input, conf);
-      return streams.getDecryptingInputStream();
+  public DataInputStream getWalStream(Path p, FSDataInputStream input)
+      throws LogHeaderIncompleteException, IOException {
+    Span span = TraceUtil.startSpan(this.getClass(), "getWalStream::Read WAL header");
+    try (Scope scope = span.makeCurrent()) {
+      span.setAttribute("file", p.toString());
+      return DfsLogger.getDecryptingStream(input, conf);
+    } catch (Exception e) {
+      TraceUtil.setException(span, e, true);
+      throw e;
     } finally {
-      span.stop();
+      span.end();
     }
   }
 
@@ -746,9 +620,9 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
       Status status, long sizeLimit, Set<Integer> desiredTids) throws IOException {
     WalEdits edits = new WalEdits();
     edits.edits = new ArrayList<>();
-    long size = 0l;
-    long entriesConsumed = 0l;
-    long numUpdates = 0l;
+    long size = 0L;
+    long entriesConsumed = 0L;
+    long numUpdates = 0L;
     LogFileKey key = new LogFileKey();
     LogFileValue value = new LogFileValue();
 
@@ -771,7 +645,7 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
       switch (key.event) {
         case DEFINE_TABLET:
           // For new DEFINE_TABLETs, we also need to record the new tids we see
-          if (target.getSourceTableId().equals(key.tablet.getTableId())) {
+          if (target.getSourceTableId().equals(key.tablet.tableId())) {
             desiredTids.add(key.tabletId);
           }
           break;
@@ -829,7 +703,7 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
 
     // Add our name, and send it
     final String name = conf.get(Property.REPLICATION_NAME);
-    if (StringUtils.isBlank(name)) {
+    if (name.isBlank()) {
       throw new IllegalArgumentException("Local system has no replication name configured");
     }
 
@@ -846,98 +720,4 @@ public class AccumuloReplicaSystem implements ReplicaSystem {
     return mutationsToSend;
   }
 
-  protected DataInputStream getRFileInputStream(Path p) throws IOException {
-    throw new UnsupportedOperationException("Not yet implemented");
-  }
-
-  public static class ReplicationStats {
-    /**
-     * The size, in bytes, of the data sent
-     */
-    public long sizeInBytes;
-
-    /**
-     * The number of records sent
-     */
-    public long sizeInRecords;
-
-    /**
-     * The number of entries consumed from the log (to increment {@link Status}'s begin)
-     */
-    public long entriesConsumed;
-
-    public ReplicationStats(long sizeInBytes, long sizeInRecords, long entriesConsumed) {
-      this.sizeInBytes = sizeInBytes;
-      this.sizeInRecords = sizeInRecords;
-      this.entriesConsumed = entriesConsumed;
-    }
-
-    @Override
-    public int hashCode() {
-      return Objects.hashCode(sizeInBytes + sizeInRecords + entriesConsumed);
-    }
-
-    @Override
-    public boolean equals(Object o) {
-      if (o != null) {
-        if (ReplicationStats.class.isAssignableFrom(o.getClass())) {
-          ReplicationStats other = (ReplicationStats) o;
-          return sizeInBytes == other.sizeInBytes && sizeInRecords == other.sizeInRecords
-              && entriesConsumed == other.entriesConsumed;
-        }
-      }
-      return false;
-    }
-  }
-
-  public static class RFileReplication extends ReplicationStats {
-    /**
-     * The data to send
-     */
-    public KeyValues keyValues;
-
-    public RFileReplication(KeyValues kvs, long size) {
-      super(size, kvs.keyValues.size(), kvs.keyValues.size());
-      this.keyValues = kvs;
-    }
-  }
-
-  /**
-   * A "struct" to avoid a nested Entry. Contains the resultant information from collecting data for
-   * replication
-   */
-  public static class WalReplication extends ReplicationStats {
-    /**
-     * The data to send over the wire
-     */
-    public WalEdits walEdits;
-
-    /**
-     * The number of updates contained in this batch
-     */
-    public long numUpdates;
-
-    public WalReplication(WalEdits edits, long size, long entriesConsumed, long numMutations) {
-      super(size, edits.getEditsSize(), entriesConsumed);
-      this.walEdits = edits;
-      this.numUpdates = numMutations;
-    }
-
-    @Override
-    public int hashCode() {
-      return super.hashCode() + Objects.hashCode(walEdits) + Objects.hashCode(numUpdates);
-    }
-
-    @Override
-    public boolean equals(Object o) {
-      if (o instanceof WalReplication) {
-        WalReplication other = (WalReplication) o;
-
-        return super.equals(other) && walEdits.equals(other.walEdits)
-            && numUpdates == other.numUpdates;
-      }
-
-      return false;
-    }
-  }
 }
