@@ -1,35 +1,37 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.start.classloader.vfs;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
 import java.io.File;
 import java.io.FileWriter;
-import java.io.IOException;
 import java.net.URLClassLoader;
 
 import org.apache.accumulo.start.classloader.AccumuloClassLoader;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.vfs2.FileSystemManager;
 import org.apache.commons.vfs2.impl.VFSClassLoader;
-import org.junit.After;
-import org.junit.Before;
+import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
 import org.junit.runner.RunWith;
@@ -39,30 +41,25 @@ import org.powermock.core.classloader.annotations.SuppressStaticInitializationFo
 import org.powermock.modules.junit4.PowerMockRunner;
 import org.powermock.reflect.Whitebox;
 
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
+
+@Deprecated
+@SuppressFBWarnings(value = "PATH_TRAVERSAL_IN", justification = "paths not set by user input")
 @RunWith(PowerMockRunner.class)
 @PrepareForTest(AccumuloVFSClassLoader.class)
 @SuppressStaticInitializationFor({"org.apache.accumulo.start.classloader.AccumuloVFSClassLoader",
     "org.apache.log4j.LogManager"})
 @PowerMockIgnore({"org.apache.log4j.*", "org.apache.hadoop.log.metrics",
     "org.apache.commons.logging.*", "org.xml.*", "javax.xml.*", "org.w3c.dom.*",
-    "org.apache.hadoop.*"})
+    "org.apache.hadoop.*", "com.sun.org.apache.xerces.*"})
 public class AccumuloVFSClassLoaderTest {
 
-  private TemporaryFolder folder1 =
+  @Rule
+  public TemporaryFolder folder1 =
       new TemporaryFolder(new File(System.getProperty("user.dir") + "/target"));
 
-  @Before
-  public void setup() throws IOException {
-    folder1.create();
-  }
-
-  @After
-  public void tearDown() {
-    folder1.delete();
-  }
-
   /*
-   * Test that if enabled, but not configured, that the code creates the 2nd level classloader
+   * Test that the default (empty dynamic class paths) does not create the 2nd level loader
    */
   @Test
   public void testDefaultConfig() throws Exception {
@@ -70,23 +67,39 @@ public class AccumuloVFSClassLoaderTest {
     Whitebox.setInternalState(AccumuloVFSClassLoader.class, "loader",
         (AccumuloReloadingVFSClassLoader) null);
 
-    File conf = folder1.newFile("accumulo-site.xml");
-    FileWriter out = new FileWriter(conf);
-    out.append("<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n");
-    out.append("<configuration>\n");
-    out.append("<property>\n");
-    out.append("<name>general.classpaths</name>\n");
-    out.append("<value></value>\n");
-    out.append("</property>\n");
-    out.append("<property>\n");
-    out.append("<name>general.vfs.classpaths</name>\n");
-    out.append("<value></value>\n");
-    out.append("</property>\n");
-    out.append("</configuration>\n");
+    File conf = folder1.newFile("accumulo.properties");
+    FileWriter out = new FileWriter(conf, UTF_8);
+    out.append("general.classpaths=\n");
+    out.append("general.vfs.classpaths=\n");
     out.close();
 
-    Whitebox.setInternalState(AccumuloClassLoader.class, "SITE_CONF",
-        conf.toURI().toURL().toString());
+    Whitebox.setInternalState(AccumuloClassLoader.class, "accumuloConfigUrl", conf.toURI().toURL());
+    Whitebox.setInternalState(AccumuloVFSClassLoader.class, "lock", new Object());
+    ClassLoader acl = AccumuloVFSClassLoader.getClassLoader();
+    assertTrue((acl instanceof URLClassLoader));
+    // We can't check to see if the parent is an instance of BuiltinClassLoader
+    // Let's assert it's not something we now about
+    assertFalse((acl.getParent() instanceof VFSClassLoader));
+    assertFalse((acl.getParent() instanceof URLClassLoader));
+  }
+
+  /*
+   * Test that if configured with dynamic class paths, that the code creates the 2nd level loader
+   */
+  @Test
+  public void testDynamicConfig() throws Exception {
+
+    Whitebox.setInternalState(AccumuloVFSClassLoader.class, "loader",
+        (AccumuloReloadingVFSClassLoader) null);
+
+    File conf = folder1.newFile("accumulo.properties");
+    FileWriter out = new FileWriter(conf, UTF_8);
+    out.append("general.classpaths=\n");
+    out.append("general.vfs.classpaths=\n");
+    out.append("general.dynamic.classpaths=" + System.getProperty("user.dir") + "\n");
+    out.close();
+
+    Whitebox.setInternalState(AccumuloClassLoader.class, "accumuloConfigUrl", conf.toURI().toURL());
     Whitebox.setInternalState(AccumuloVFSClassLoader.class, "lock", new Object());
     ClassLoader acl = AccumuloVFSClassLoader.getClassLoader();
     assertTrue((acl instanceof VFSClassLoader));
@@ -106,23 +119,15 @@ public class AccumuloVFSClassLoaderTest {
     FileUtils.copyURLToFile(this.getClass().getResource("/HelloWorld.jar"),
         folder1.newFile("HelloWorld.jar"));
 
-    File conf = folder1.newFile("accumulo-site.xml");
-    FileWriter out = new FileWriter(conf);
-    out.append("<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n");
-    out.append("<configuration>\n");
-    out.append("<property>\n");
-    out.append("<name>general.classpaths</name>\n");
-    out.append("<value></value>\n");
-    out.append("</property>\n");
-    out.append("<property>\n");
-    out.append("<name>general.vfs.classpaths</name>\n");
-    out.append("<value>" + new File(folder1.getRoot(), "HelloWorld.jar").toURI() + "</value>\n");
-    out.append("</property>\n");
-    out.append("</configuration>\n");
+    File conf = folder1.newFile("accumulo.properties");
+    FileWriter out = new FileWriter(conf, UTF_8);
+    out.append("general.classpaths=\n");
+    out.append(
+        "general.vfs.classpaths=" + new File(folder1.getRoot(), "HelloWorld.jar").toURI() + "\n");
+    out.append("general.dynamic.classpaths=" + System.getProperty("user.dir") + "\n");
     out.close();
 
-    Whitebox.setInternalState(AccumuloClassLoader.class, "SITE_CONF",
-        conf.toURI().toURL().toString());
+    Whitebox.setInternalState(AccumuloClassLoader.class, "accumuloConfigUrl", conf.toURI().toURL());
     Whitebox.setInternalState(AccumuloVFSClassLoader.class, "lock", new Object());
     ClassLoader acl = AccumuloVFSClassLoader.getClassLoader();
     assertTrue((acl instanceof VFSClassLoader));
@@ -132,7 +137,7 @@ public class AccumuloVFSClassLoaderTest {
     // We can't be sure what the authority/host will be due to FQDN mappings, so just check the path
     assertTrue(arvcl.getFileObjects()[0].getURL().toString().contains("HelloWorld.jar"));
     Class<?> clazz1 = arvcl.loadClass("test.HelloWorld");
-    Object o1 = clazz1.newInstance();
+    Object o1 = clazz1.getDeclaredConstructor().newInstance();
     assertEquals("Hello World!", o1.toString());
     Whitebox.setInternalState(AccumuloVFSClassLoader.class, "loader",
         (AccumuloReloadingVFSClassLoader) null);
@@ -144,23 +149,13 @@ public class AccumuloVFSClassLoaderTest {
     Whitebox.setInternalState(AccumuloVFSClassLoader.class, "loader",
         (AccumuloReloadingVFSClassLoader) null);
 
-    File conf = folder1.newFile("accumulo-site.xml");
-    FileWriter out = new FileWriter(conf);
-    out.append("<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n");
-    out.append("<configuration>\n");
-    out.append("<property>\n");
-    out.append("<name>general.classpaths</name>\n");
-    out.append("<value></value>\n");
-    out.append("</property>\n");
-    out.append("<property>\n");
-    out.append("<name>general.vfs.classpaths</name>\n");
-    out.append("<value></value>\n");
-    out.append("</property>\n");
-    out.append("</configuration>\n");
+    File conf = folder1.newFile("accumulo.properties");
+    FileWriter out = new FileWriter(conf, UTF_8);
+    out.append("general.classpaths=\n");
+    out.append("general.vfs.classpaths=\n");
     out.close();
 
-    Whitebox.setInternalState(AccumuloClassLoader.class, "SITE_CONF",
-        conf.toURI().toURL().toString());
+    Whitebox.setInternalState(AccumuloClassLoader.class, "accumuloConfigUrl", conf.toURI().toURL());
     Whitebox.setInternalState(AccumuloVFSClassLoader.class, "lock", new Object());
     AccumuloVFSClassLoader.getClassLoader();
     FileSystemManager manager = AccumuloVFSClassLoader.generateVfs();
@@ -175,7 +170,7 @@ public class AccumuloVFSClassLoaderTest {
       javaIoTmpDir = javaIoTmpDir.substring(0, javaIoTmpDir.length() - File.separator.length());
     }
 
-    assertTrue(javaIoTmpDir.equals(tempDirParent));
+    assertEquals(javaIoTmpDir, tempDirParent);
     assertTrue(tempDirName.startsWith("accumulo-vfs-cache-"));
     assertTrue(tempDirName.endsWith(System.getProperty("user.name", "nouser")));
 
@@ -190,23 +185,13 @@ public class AccumuloVFSClassLoaderTest {
         (AccumuloReloadingVFSClassLoader) null);
     String cacheDir = "/some/random/cache/dir";
 
-    File conf = folder1.newFile("accumulo-site.xml");
-    FileWriter out = new FileWriter(conf);
-    out.append("<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n");
-    out.append("<configuration>\n");
-    out.append("<property>\n");
-    out.append("<name>general.classpaths</name>\n");
-    out.append("<value></value>\n");
-    out.append("</property>\n");
-    out.append("<property>\n");
-    out.append("<name>" + AccumuloVFSClassLoader.VFS_CACHE_DIR + "</name>\n");
-    out.append("<value>" + cacheDir + "</value>\n");
-    out.append("</property>\n");
-    out.append("</configuration>\n");
+    File conf = folder1.newFile("accumulo.properties");
+    FileWriter out = new FileWriter(conf, UTF_8);
+    out.append("general.classpaths=\n");
+    out.append(AccumuloVFSClassLoader.VFS_CACHE_DIR + "=" + cacheDir + "\n");
     out.close();
 
-    Whitebox.setInternalState(AccumuloClassLoader.class, "SITE_CONF",
-        conf.toURI().toURL().toString());
+    Whitebox.setInternalState(AccumuloClassLoader.class, "accumuloConfigUrl", conf.toURI().toURL());
     Whitebox.setInternalState(AccumuloVFSClassLoader.class, "lock", new Object());
     AccumuloVFSClassLoader.getClassLoader();
     FileSystemManager manager = AccumuloVFSClassLoader.generateVfs();
@@ -214,7 +199,7 @@ public class AccumuloVFSClassLoaderTest {
     File tempDir = Whitebox.getInternalState(replicator, "tempDir");
     String tempDirParent = tempDir.getParent();
     String tempDirName = tempDir.getName();
-    assertTrue(cacheDir.equals(tempDirParent));
+    assertEquals(cacheDir, tempDirParent);
     assertTrue(tempDirName.startsWith("accumulo-vfs-cache-"));
     assertTrue(tempDirName.endsWith(System.getProperty("user.name", "nouser")));
 
