@@ -1,18 +1,20 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.test.replication;
 
@@ -31,12 +33,13 @@ import java.util.Map.Entry;
 import java.util.Set;
 import java.util.UUID;
 
+import org.apache.accumulo.core.client.Accumulo;
+import org.apache.accumulo.core.client.AccumuloClient;
 import org.apache.accumulo.core.client.BatchWriter;
-import org.apache.accumulo.core.client.BatchWriterConfig;
-import org.apache.accumulo.core.client.Connector;
 import org.apache.accumulo.core.client.Scanner;
 import org.apache.accumulo.core.data.Key;
 import org.apache.accumulo.core.data.Mutation;
+import org.apache.accumulo.core.data.TableId;
 import org.apache.accumulo.core.data.Value;
 import org.apache.accumulo.core.metadata.schema.MetadataSchema.ReplicationSection;
 import org.apache.accumulo.core.protobuf.ProtobufUtil;
@@ -45,7 +48,7 @@ import org.apache.accumulo.core.replication.ReplicationSchema.StatusSection;
 import org.apache.accumulo.core.replication.ReplicationTable;
 import org.apache.accumulo.core.security.Authorizations;
 import org.apache.accumulo.core.security.TablePermission;
-import org.apache.accumulo.master.replication.StatusMaker;
+import org.apache.accumulo.manager.replication.StatusMaker;
 import org.apache.accumulo.server.fs.VolumeManager;
 import org.apache.accumulo.server.replication.StatusUtil;
 import org.apache.accumulo.server.replication.proto.Replication.Status;
@@ -56,23 +59,26 @@ import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.io.Text;
 import org.easymock.EasyMock;
 import org.junit.Before;
+import org.junit.Ignore;
 import org.junit.Test;
 
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Sets;
 
+@Ignore("Replication ITs are not stable and not currently maintained")
+@Deprecated
 public class StatusMakerIT extends ConfigurableMacBase {
 
-  private Connector conn;
+  private AccumuloClient client;
   private VolumeManager fs;
 
   @Before
   public void setupInstance() throws Exception {
-    conn = getConnector();
-    ReplicationTable.setOnline(conn);
-    conn.securityOperations().grantTablePermission(conn.whoami(), ReplicationTable.NAME,
+    client = Accumulo.newClient().from(getClientProperties()).build();
+    ReplicationTable.setOnline(client);
+    client.securityOperations().grantTablePermission(client.whoami(), ReplicationTable.NAME,
         TablePermission.WRITE);
-    conn.securityOperations().grantTablePermission(conn.whoami(), ReplicationTable.NAME,
+    client.securityOperations().grantTablePermission(client.whoami(), ReplicationTable.NAME,
         TablePermission.READ);
     fs = EasyMock.mock(VolumeManager.class);
   }
@@ -80,10 +86,10 @@ public class StatusMakerIT extends ConfigurableMacBase {
   @Test
   public void statusRecordsCreated() throws Exception {
     String sourceTable = testName.getMethodName();
-    conn.tableOperations().create(sourceTable);
-    ReplicationTableUtil.configureMetadataTable(conn, sourceTable);
+    client.tableOperations().create(sourceTable);
+    ReplicationTableUtil.configureMetadataTable(client, sourceTable);
 
-    BatchWriter bw = conn.createBatchWriter(sourceTable, new BatchWriterConfig());
+    BatchWriter bw = client.createBatchWriter(sourceTable);
     String walPrefix = "hdfs://localhost:8020/accumulo/wals/tserver+port/";
     Set<String> files =
         Sets.newHashSet(walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID(),
@@ -106,33 +112,34 @@ public class StatusMakerIT extends ConfigurableMacBase {
 
     bw.close();
 
-    StatusMaker statusMaker = new StatusMaker(conn, fs);
+    StatusMaker statusMaker = new StatusMaker(client, fs);
     statusMaker.setSourceTableName(sourceTable);
 
     statusMaker.run();
 
-    Scanner s = ReplicationTable.getScanner(conn);
-    StatusSection.limit(s);
-    Text file = new Text();
-    for (Entry<Key,Value> entry : s) {
-      StatusSection.getFile(entry.getKey(), file);
-      String tableId = StatusSection.getTableId(entry.getKey());
+    try (Scanner s = ReplicationTable.getScanner(client)) {
+      StatusSection.limit(s);
+      Text file = new Text();
+      for (Entry<Key,Value> entry : s) {
+        StatusSection.getFile(entry.getKey(), file);
+        TableId tableId = StatusSection.getTableId(entry.getKey());
 
-      assertTrue("Found unexpected file: " + file, files.contains(file.toString()));
-      assertEquals(fileToTableId.get(file.toString()), new Integer(tableId));
-      timeCreated = fileToTimeCreated.get(file.toString());
-      assertNotNull(timeCreated);
-      assertEquals(StatusUtil.fileCreated(timeCreated), Status.parseFrom(entry.getValue().get()));
+        assertTrue("Found unexpected file: " + file, files.contains(file.toString()));
+        assertEquals(fileToTableId.get(file.toString()), Integer.valueOf(tableId.canonical()));
+        timeCreated = fileToTimeCreated.get(file.toString());
+        assertNotNull(timeCreated);
+        assertEquals(StatusUtil.fileCreated(timeCreated), Status.parseFrom(entry.getValue().get()));
+      }
     }
   }
 
   @Test
   public void openMessagesAreNotDeleted() throws Exception {
     String sourceTable = testName.getMethodName();
-    conn.tableOperations().create(sourceTable);
-    ReplicationTableUtil.configureMetadataTable(conn, sourceTable);
+    client.tableOperations().create(sourceTable);
+    ReplicationTableUtil.configureMetadataTable(client, sourceTable);
 
-    BatchWriter bw = conn.createBatchWriter(sourceTable, new BatchWriterConfig());
+    BatchWriter bw = client.createBatchWriter(sourceTable);
     String walPrefix = "hdfs://localhost:8020/accumulo/wals/tserver+port/";
     Set<String> files =
         Sets.newHashSet(walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID(),
@@ -153,24 +160,25 @@ public class StatusMakerIT extends ConfigurableMacBase {
 
     bw.close();
 
-    StatusMaker statusMaker = new StatusMaker(conn, fs);
+    StatusMaker statusMaker = new StatusMaker(client, fs);
     statusMaker.setSourceTableName(sourceTable);
 
     statusMaker.run();
 
-    Scanner s = conn.createScanner(sourceTable, Authorizations.EMPTY);
-    s.setRange(ReplicationSection.getRange());
-    s.fetchColumnFamily(ReplicationSection.COLF);
-    assertEquals(files.size(), Iterables.size(s));
+    try (Scanner s = client.createScanner(sourceTable, Authorizations.EMPTY)) {
+      s.setRange(ReplicationSection.getRange());
+      s.fetchColumnFamily(ReplicationSection.COLF);
+      assertEquals(files.size(), Iterables.size(s));
+    }
   }
 
   @Test
   public void closedMessagesAreDeleted() throws Exception {
     String sourceTable = testName.getMethodName();
-    conn.tableOperations().create(sourceTable);
-    ReplicationTableUtil.configureMetadataTable(conn, sourceTable);
+    client.tableOperations().create(sourceTable);
+    ReplicationTableUtil.configureMetadataTable(client, sourceTable);
 
-    BatchWriter bw = conn.createBatchWriter(sourceTable, new BatchWriterConfig());
+    BatchWriter bw = client.createBatchWriter(sourceTable);
     String walPrefix = "hdfs://localhost:8020/accumulo/wals/tserver+port/";
     Set<String> files =
         Sets.newHashSet(walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID(),
@@ -191,31 +199,33 @@ public class StatusMakerIT extends ConfigurableMacBase {
 
     bw.close();
 
-    StatusMaker statusMaker = new StatusMaker(conn, fs);
+    StatusMaker statusMaker = new StatusMaker(client, fs);
     statusMaker.setSourceTableName(sourceTable);
 
     statusMaker.run();
 
-    Scanner s = conn.createScanner(sourceTable, Authorizations.EMPTY);
-    s.setRange(ReplicationSection.getRange());
-    s.fetchColumnFamily(ReplicationSection.COLF);
-    for (Entry<Key,Value> e : s) {
-      System.out.println(e.getKey().toStringNoTruncate() + " " + e.getValue());
+    try (Scanner s = client.createScanner(sourceTable, Authorizations.EMPTY)) {
+      s.setRange(ReplicationSection.getRange());
+      s.fetchColumnFamily(ReplicationSection.COLF);
+      for (Entry<Key,Value> e : s) {
+        System.out.println(e.getKey().toStringNoTruncate() + " " + e.getValue());
+      }
     }
-    s = conn.createScanner(sourceTable, Authorizations.EMPTY);
-    s.setRange(ReplicationSection.getRange());
-    s.fetchColumnFamily(ReplicationSection.COLF);
-    assertEquals(0, Iterables.size(s));
 
+    try (Scanner s = client.createScanner(sourceTable, Authorizations.EMPTY)) {
+      s.setRange(ReplicationSection.getRange());
+      s.fetchColumnFamily(ReplicationSection.COLF);
+      assertEquals(0, Iterables.size(s));
+    }
   }
 
   @Test
   public void closedMessagesCreateOrderRecords() throws Exception {
     String sourceTable = testName.getMethodName();
-    conn.tableOperations().create(sourceTable);
-    ReplicationTableUtil.configureMetadataTable(conn, sourceTable);
+    client.tableOperations().create(sourceTable);
+    ReplicationTableUtil.configureMetadataTable(client, sourceTable);
 
-    BatchWriter bw = conn.createBatchWriter(sourceTable, new BatchWriterConfig());
+    BatchWriter bw = client.createBatchWriter(sourceTable);
     String walPrefix = "hdfs://localhost:8020/accumulo/wals/tserver+port/";
     List<String> files = Arrays.asList(walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID(),
         walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID());
@@ -238,32 +248,35 @@ public class StatusMakerIT extends ConfigurableMacBase {
 
     bw.close();
 
-    StatusMaker statusMaker = new StatusMaker(conn, fs);
+    StatusMaker statusMaker = new StatusMaker(client, fs);
     statusMaker.setSourceTableName(sourceTable);
 
     statusMaker.run();
 
-    Scanner s = conn.createScanner(sourceTable, Authorizations.EMPTY);
-    s.setRange(ReplicationSection.getRange());
-    s.fetchColumnFamily(ReplicationSection.COLF);
-    assertEquals(0, Iterables.size(s));
-
-    s = ReplicationTable.getScanner(conn);
-    OrderSection.limit(s);
-    Iterator<Entry<Key,Value>> iter = s.iterator();
-    assertTrue("Found no order records in replication table", iter.hasNext());
-
-    Iterator<String> expectedFiles = files.iterator();
-    Text buff = new Text();
-    while (expectedFiles.hasNext() && iter.hasNext()) {
-      String file = expectedFiles.next();
-      Entry<Key,Value> entry = iter.next();
-
-      assertEquals(file, OrderSection.getFile(entry.getKey(), buff));
-      OrderSection.getTableId(entry.getKey(), buff);
-      assertEquals(fileToTableId.get(file).intValue(), Integer.parseInt(buff.toString()));
+    Iterator<Entry<Key,Value>> iter;
+    Iterator<String> expectedFiles;
+    try (Scanner s = client.createScanner(sourceTable, Authorizations.EMPTY)) {
+      s.setRange(ReplicationSection.getRange());
+      s.fetchColumnFamily(ReplicationSection.COLF);
+      assertEquals(0, Iterables.size(s));
     }
 
+    try (Scanner s = ReplicationTable.getScanner(client)) {
+      OrderSection.limit(s);
+      iter = s.iterator();
+      assertTrue("Found no order records in replication table", iter.hasNext());
+
+      expectedFiles = files.iterator();
+      Text buff = new Text();
+      while (expectedFiles.hasNext() && iter.hasNext()) {
+        String file = expectedFiles.next();
+        Entry<Key,Value> entry = iter.next();
+
+        assertEquals(file, OrderSection.getFile(entry.getKey(), buff));
+        OrderSection.getTableId(entry.getKey(), buff);
+        assertEquals(fileToTableId.get(file).intValue(), Integer.parseInt(buff.toString()));
+      }
+    }
     assertFalse("Found more files unexpectedly", expectedFiles.hasNext());
     assertFalse("Found more entries in replication table unexpectedly", iter.hasNext());
   }
@@ -271,10 +284,10 @@ public class StatusMakerIT extends ConfigurableMacBase {
   @Test
   public void orderRecordsCreatedWithNoCreatedTime() throws Exception {
     String sourceTable = testName.getMethodName();
-    conn.tableOperations().create(sourceTable);
-    ReplicationTableUtil.configureMetadataTable(conn, sourceTable);
+    client.tableOperations().create(sourceTable);
+    ReplicationTableUtil.configureMetadataTable(client, sourceTable);
 
-    BatchWriter bw = conn.createBatchWriter(sourceTable, new BatchWriterConfig());
+    BatchWriter bw = client.createBatchWriter(sourceTable);
     String walPrefix = "hdfs://localhost:8020/accumulo/wals/tserver+port/";
     List<String> files = Arrays.asList(walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID(),
         walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID());
@@ -307,17 +320,17 @@ public class StatusMakerIT extends ConfigurableMacBase {
 
     bw.close();
 
-    StatusMaker statusMaker = new StatusMaker(conn, fs);
+    StatusMaker statusMaker = new StatusMaker(client, fs);
     statusMaker.setSourceTableName(sourceTable);
 
     statusMaker.run();
 
-    Scanner s = conn.createScanner(sourceTable, Authorizations.EMPTY);
+    Scanner s = client.createScanner(sourceTable, Authorizations.EMPTY);
     s.setRange(ReplicationSection.getRange());
     s.fetchColumnFamily(ReplicationSection.COLF);
     assertEquals(0, Iterables.size(s));
 
-    s = ReplicationTable.getScanner(conn);
+    s = ReplicationTable.getScanner(client);
     OrderSection.limit(s);
     Iterator<Entry<Key,Value>> iter = s.iterator();
     assertTrue("Found no order records in replication table", iter.hasNext());
@@ -339,12 +352,12 @@ public class StatusMakerIT extends ConfigurableMacBase {
     assertFalse("Found more files unexpectedly", expectedFiles.hasNext());
     assertFalse("Found more entries in replication table unexpectedly", iter.hasNext());
 
-    s = conn.createScanner(sourceTable, Authorizations.EMPTY);
+    s = client.createScanner(sourceTable, Authorizations.EMPTY);
     s.setRange(ReplicationSection.getRange());
     s.fetchColumnFamily(ReplicationSection.COLF);
     assertEquals(0, Iterables.size(s));
 
-    s = ReplicationTable.getScanner(conn);
+    s = ReplicationTable.getScanner(client);
     s.setRange(ReplicationSection.getRange());
     iter = s.iterator();
     assertTrue("Found no stat records in replication table", iter.hasNext());
